// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploadRowStatus should render circular progress if upload is in progress 1`] = `
<div>
  <span
    aria-valuenow="50"
    class="MuiCircularProgress-root MuiCircularProgress-determinate MuiCircularProgress-colorPrimary css-p69bgp-MuiCircularProgress-root"
    role="progressbar"
    style="width: 20px; height: 20px; transform: rotate(-90deg);"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleDeterminate css-eorpq6-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
        style="stroke-dasharray: 125.664; stroke-dashoffset: 62.832px;"
      />
    </svg>
  </span>
  <span
    aria-label="50%"
    class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
  >
    50%
  </span>
</div>
`;

exports[`Component FileUploadRowStatus should render default view 1`] = `
<div>
  <span
    aria-label="Remove this file"
    class=""
    data-mui-internal-clone-element="true"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
      data-analyticsid="undefined-delete"
      data-testid="undefined-delete"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`Component FileUploadRowStatus should render disabled view 1`] = `
<div>
  <span
    aria-label="Remove this file"
    class=""
    data-mui-internal-clone-element="true"
  >
    <button
      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
      data-analyticsid="undefined-delete"
      data-testid="undefined-delete"
      disabled=""
      tabindex="-1"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
        />
      </svg>
    </button>
  </span>
</div>
`;

exports[`Component FileUploadRowStatus should render done icon if upload is finished 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
    tabindex="0"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
      data-testid="DoneIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4z"
      />
    </svg>
  </button>
</div>
`;

exports[`Component FileUploadRowStatus should render for edge browser if file is being uploaded but no progress data 1`] = `
<div>
  <span
    class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-1jjkwrz-MuiCircularProgress-root"
    role="progressbar"
    style="width: 20px; height: 20px;"
  >
    <svg
      class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
        cx="44"
        cy="44"
        fill="none"
        r="20"
        stroke-width="4"
      />
    </svg>
  </span>
  <span
    aria-label="Uploading..."
    class="MuiTypography-root MuiTypography-caption css-bf50cq-MuiTypography-root"
  >
    Uploading...
  </span>
</div>
`;

exports[`Component FileUploadRowStatus should render if file uploaded successfully but later other file failed 1`] = `
<div>
  <span
    aria-label="Remove this file"
    class=""
    data-mui-internal-clone-element="true"
  >
    <button
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-15ix11i-MuiButtonBase-root-MuiIconButton-root"
      data-analyticsid="undefined-delete"
      data-testid="undefined-delete"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6zM19 4h-3.5l-1-1h-5l-1 1H5v2h14z"
        />
      </svg>
    </button>
  </span>
</div>
`;
